# testes_uv

./: hello.py  pyproject.toml  teste.py
.github/workflows/: qodana_code_quality.yml
